
- New VFS.copy() methods:
  copy(ProgressObserver progress, VFS sourceVFS, Object sourceSession,
  	String sourcePath, VFS targetVFS, Object targetSession,
  	String targetPath, Component comp, boolean canStop,
  	boolean sendVFSUpdate)
  copy(ProgressObserver progress, String sourcePath,String targetPath,
  	Component comp, boolean canStop, boolean sendVFSUpdate)
  (Matthieu Casanova)

- New method MiscUtilities.getCompleteBaseName() to return the complete base
  name of a file (until the last .) (Matthieu Casanova)

- TextUtilities.join() now accept Collection<?> instead of Collection<String>
  (Matthieu Casanova)

- OperatingSystem.isOS2() method is removed since OS/2 cannot run jEdit since
  many years (Matthieu Casanova)

- OperatingSystem.isDOSDerived() is now deprecated since OS/2 do not exists
  anymore Windows is the only DOS derived OS, so use OperatingSystem.isWindows()
  instead (Matthieu Casanova)

}}}
{{{ Editing
- Added some missing keywords to vrml2 edit mode (patch #3471586) (Jimmy Chaw)

- Using no highlight or limited syntax highlight in large buffers now also
  disables soft wrap (Matthieu Casanova)

- Using no highlight or limited syntax highlight in large buffers now disables
  highlight of very long lines (Matthieu Casanova)

- Latex Indentation a nuisance (# 3432974)

- Made it possible to disable automatic indentation by buffer or by edit
  mode, and created a status widget to toggle the setting (Evan Wright)

- Fix for tracker 2976661, script tag attributes not syntax highlighted.
  (Dale Anson)

- Fix for tracker 3165177, method/function names not always highlighted.
  (Dale Anson)

- Fix for tracker 846913, jsp syntax highlighting for single line comments.
  (Dale Anson)

}}}
{{{ UI

- Combined Global and Plugin options into a single pane, making Optional plugin
	obsolete. (Alan Ezust - # 3455602)

- jEdit is now always using continuous layout in JSplitPane (Matthieu Casanova)
